--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+.hero-bg{
+  
+  background-color: aqua;
 
+}
+.bg-biden{
+  color: green;
+  background-color: aqua;
+  background: rgba(79, 72, 236, 0.05);
+}
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
