--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --swiper-pagination-color: #4F48EC;
+}
+
+@layer base {
+
+  @font-face {
+    font-family: 'Neuething-Sans-Test';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('./assets/fonts/NeuethingVariableTest-RegularExtraExpanded.otf') format('opentype');
+  }
+
+  @font-face {
+    font-family: 'Neuething-Sans-Test';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url('./assets/fonts/NeuethingVariableTest-MediumExtraExpanded.otf') format('opentype');
+  }
+
+  @font-face {
+    font-family: 'Neuething-Sans-Test';
+    font-style: normal;
+    font-weight: 600;
+    font-display: swap;
+    src: url('./assets/fonts/NeuethingVariableTest-SemiBoldExtraExpanded.otf') format('opentype');
+  }
+
+}
+
 .hero-bg{
   
   background-color: aqua;
