reponsivness of mobile page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,12 @@
   --swiper-pagination-color: #4F48EC;
 }
 
+@layer components{
+  .pad1 {
+    @apply px-10 small-pc:px-14 tablet:px-10 phone:px-5
+  }
+}
+
 @layer base {
 
   @font-face {
