--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,9 @@
   .pad1 {
     @apply px-[120px] small-pc:px-14 tablet:px-10 phone:px-5
   }
+  .pad2{
+    @apply pt-[10px] pb-[10px] pl-[6px] pr-[6px]
+  }
 }
 
 @layer base {
